--- a/gb/23/9/11/n14071601.md
+++ b/gb/23/9/11/n14071601.md
@@ -32,45 +32,38 @@
 <p><em>原文：<ahref="https://www.theepochtimes.com/us/nyc-mayor-announces-potential-budget-cuts-amid-immigration-crisis-5489162">NYC Mayor Announces Potential Budget Cuts Amid Immigration Crisis</a>刊登于英文《大纪元时报》。</em></p>
 <p>责任编辑：李琳#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060014.md#1">亚当斯对以色列无人机感兴趣 欲让警局学习</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065069.md#1">亚当斯走上街头 促联邦加快核发无证移民工卡</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069245.md#1">亚当斯警告：移民危机将摧毁纽约市</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071651.md#1">防弹奢侈加美食 金正恩神秘绿专列再引关注</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137512.md#1">俄反对派领袖被移监 美警告国际将追究俄责任</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：公主游玩帐篷6折节日优惠 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10990583.md#1" target="_blank">林辉：岳飞忠魂千古颂 中共侮辱英雄可憎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/15/n9844557.md#1" target="_blank">毛泽东诗词“蔑视祖宗 自认风流”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069176.md#1">【未解之谜】2025年大巨变？深度解读《黄檗禅师诗》（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066374.md#1">【未解之谜】深度解读《黄檗禅师诗》（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067434.md#1">【杨延昭传奇】乱世中的命定姻缘（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065739.md#1">做好事遭污名他却不辩解  到底是为了什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068727.md#1">白露节气养生小心哪些禁忌？“补露”怎么补？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070428.md#1">【中国禁闻】习团灭火箭军高层的真实原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071393.md#1">【全球新闻】拜登：中国经济面临真正困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070508.md#1">【时事金扫描】深圳泄洪淹香港？王芳激怒乌克兰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070482.md#1">【内幕】火箭军司令部被一锅端的背后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070342.md#1">许家印不利消息频传 分析：恒大涉习曾权斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070041.md#1">李强曝中共培养东盟领导人计划 网友称可怕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069882.md#1">周杰伦天津开唱发生意外 困于旋转球呕吐摔伤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14069874.md#1">《大怪兽卡美拉：重生》影评：拯救人类的英雄 这回是只大乌龟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069974.md#1">带吸氧装置西安开唱 五月天阿信憔悴模样曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069917.md#1">容祖儿暴雨中驾车如驾船 蔡卓妍惊呼“恐怖”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14070653.md#1">梁朝伟返港时疑躲避媒体 被刘嘉玲拽回网笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070034.md#1">喝咖啡或致胆固醇超标 研究发现1喝法最健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069972.md#1">COVID-19重症住院后 这些癌症风险倍增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061507.md#1">眼药水只能暂时缓解 中医教你根本上改善干眼症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069211.md#1">【雪说健康】食糖上瘾如毒药 专家简单4招摆脱糖瘾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070311.md#1">饲主能让小狗独处多久？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120907.md#1">【古道人生】结婚十年同寝只一月 夫妻终不能团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137451.md#1">【马克时空】中共重金诱惑 想偷台湾CH-47</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137471.md#1">【秦鹏观察】中南海祭出3大招 耶伦批北京胡来</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137357.md#1">【舞蹈三剑客】2024神韵巡演在即 三剑客久违的Q&#038;A</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136580.md#1">北京地铁车厢断裂515人送医 近千人雪夜逃离</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135089.md#1">港星周海媚在北京猝逝 旧爱吕良伟发文悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：装点节日气氛 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/11/n14071601.htm">纽约市长宣布可能削减预算以应对移民危机</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071601.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
